--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,7 @@ body {
 
 .container {
     display: flex;
-    margin-left: 100px;
+    margin-left: 15%;
     flex: 1;
     justify-content: flex-start;
 }
@@ -58,6 +58,7 @@ body {
 
 .btn {
     display: flex;
+    align-items: center;
     justify-content: center;
     border: none;
     background-color: var(--btn-primary);
@@ -78,10 +79,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 400px;
     height: 700px;
-    margin-left: 30%;
+    margin-left: 10%;
     background-color: var(--notice-color);
     border-radius: 32px;
 }
@@ -105,7 +106,7 @@ h1 .mensagem-area__txt {
     display: flex;
     flex-direction: column;
     text-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     cursor: pointer;
     width: 80%;
     background-color: var(--notice-color);
@@ -120,4 +121,39 @@ h1 .mensagem-area__txt {
     width: 80%;
     margin-bottom: 30px;
     display: none;
+}
+@media screen and (max-width: 1300px) {
+
+    .logoAlura {
+        margin-left: 1rem;
+    }
+    .container {
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 5%;
+    }
+
+    .container__text {
+        width: 100%;
+    }
+
+    .container__text-area {
+        width: 100%;
+    }
+    
+    .buttons {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .mensagem-area{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 80px;
+        margin-left: 10px;
+        width: 320px;
+    }
+
 }
